fixed intro-section alignment issues

--- a/css/index.css
+++ b/css/index.css
@@ -139,10 +139,12 @@ table {
 html {
   font-size: 62.5%;
 }
+body {
+  padding-left: 15rem;
+  padding-right: 15rem;
+}
 html,
 body {
-  margin-left: 8rem;
-  margin-right: 8rem;
   font-family: 'Roboto', sans-serif;
 }
 h1,
@@ -173,6 +175,11 @@ p {
 img {
   max-width: 100%;
   height: auto;
+}
+.intro-section {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
 }
 .container {
   max-width: 800px;
@@ -205,7 +212,7 @@ header {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
   height: 9rem;
@@ -239,11 +246,11 @@ header nav ul li {
   border-bottom: 2px dashed #C0C0C0;
   flex-direction: column;
   justify-content: center;
-  width: 80rem;
-  margin-left: 27rem;
+  width: auto;
 }
 .intro-section img {
   align-self: center;
+  width: 100%;
 }
 .intro-section h2 {
   align-self: flex-start;
@@ -251,7 +258,9 @@ header nav ul li {
   padding-top: 2.25rem;
 }
 .intro-section p {
-  width: 85%;
+  align-self: flex-start;
+  font-size: 1.75rem;
+  padding: 0 0 2rem 0.5rem;
 }
 .home .content-section {
   margin: 30px 0;
