--- a/less/global.less
+++ b/less/global.less
@@ -6,9 +6,12 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  padding-left: 15rem;
+  padding-right: 15rem;
+}
+
 html, body {
-  margin-left: 8rem;
-  margin-right: 8rem;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -43,11 +46,20 @@ img {
   height: auto;
 }
 
+// set max-width 800px to bring it inline with other content
+.intro-section {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+}
+
 .container {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
 }
+
+
 
 // Button styling
 .btn button {
